multiqueue: Wake up any waiting streams if the current one goes EOS

Otherwise we might have unlinked streams waiting.

https://bugzilla.gnome.org/show_bug.cgi?id=738198